--- a/assets/scss/alg-wc-wish-list/modules/_buttons.scss
+++ b/assets/scss/alg-wc-wish-list/modules/_buttons.scss
@@ -86,7 +86,7 @@
 	left: 13px;
 	position: absolute;
 	font-size: 0;
-	z-index: 2;
+	z-index: 80;
 	display:none;
 	div i{
 		font-size: 20px;
